@@ -280,6 +280,7 @@ void MainWindow::initToolbar() {
 	
 	int image = 0;
 	toolbar->appendItem(IDC_PUBLIC_HUBS, image++, T_("Public Hubs"));
+	toolbar->appendSeparator();
 	toolbar->appendItem(IDC_RECONNECT, image++, T_("Reconnect"));
 	toolbar->appendItem(IDC_FOLLOW, image++, T_("Follow last redirect"));
 	toolbar->appendSeparator();
@@ -296,8 +297,11 @@ void MainWindow::initToolbar() {
 	toolbar->appendItem(IDC_SEARCH_SPY, image++, T_("Search Spy"));
 	toolbar->appendSeparator();
 	toolbar->appendItem(IDC_OPEN_FILE_LIST, image++, T_("Open file list..."));
+	toolbar->appendSeparator();
 	toolbar->appendItem(IDC_SETTINGS, image++, T_("Settings"));
 	toolbar->appendItem(IDC_NOTEPAD, image++, T_("Notepad"));
+	toolbar->appendSeparator();
+	toolbar->appendItem(IDC_WHATS_THIS, image++, T_("\"What's this?\" help"), std::tr1::bind(&MainWindow::handleWhatsThis, this));
 }
 
 void MainWindow::initStatusBar() {
@@ -1075,6 +1079,10 @@ void MainWindow::handleCloseWindows(unsigned id) {
 		SearchFrame::closeAll();
 		break;
 	}
+}
+
+void MainWindow::handleWhatsThis() {
+	sendMessage(WM_SYSCOMMAND, SC_CONTEXTHELP);
 }
 
 void MainWindow::on(HttpConnectionListener::Data, HttpConnection* /*conn*/, const uint8_t* buf, size_t len) throw() {
