@@ -156,6 +156,7 @@ private:
 	void handleAbout();
 	void handleHashProgress();
 	void handleCloseWindows(unsigned id);
+	void handleWhatsThis();
 	void handleSize();
 	void handleActivate(bool active);
 	LRESULT handleEndSession();
