@@ -5,6 +5,7 @@
 * Fixed out of focus window when restoring from icon (poy)
 * [L#203865] Fixed multiple instances (poy)
 * Context-sensitive help (poy)
+* Fixed toolbar separators (poy)
 
 -- 0.705 2008-03-14 --
 * Several patches for better *nix compatibility of the core (thanks steven sheehy et al)
